fixed css spacing bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ display: inline-block;
 
 #long{
   margin-top: 10px;
-  width: 49.9%;
+  width: 49.5%;
   display: inline-block;
   }
 
